[gd_scene load_steps=20 format=3 uid="uid://hwaedlkev7jf"]

[ext_resource type="Script" path="res://Fases/scripts/menu_roupas.gd" id="1_t5yqr"]
[ext_resource type="Texture2D" uid="uid://k7ujbub0a8dh" path="res://Artes/Botoes/Cabelo1.png" id="2_i7264"]
[ext_resource type="Texture2D" uid="uid://dltc23krir1a7" path="res://Artes/Botoes/Cabelo2.png" id="3_cpvgt"]
[ext_resource type="Texture2D" uid="uid://bq7mwisglw6e6" path="res://Artes/Botoes/Cabelo3.png" id="4_i6cjw"]
[ext_resource type="Texture2D" uid="uid://buxk4w5kqywxw" path="res://Artes/Botoes/OlhosVerdes.png" id="5_xuwbi"]
[ext_resource type="Texture2D" uid="uid://cc6k8niy46c3u" path="res://Artes/Botoes/OlhosAzuis.png" id="6_t4gv2"]
[ext_resource type="Texture2D" uid="uid://bionvy4fvs13u" path="res://Artes/Botoes/OlhosCastanhos.png" id="7_nfqoe"]
[ext_resource type="Texture2D" uid="uid://bcl0b8gaf8ne3" path="res://Artes/Botoes/OlhosRosas.png" id="8_x31bm"]
[ext_resource type="Texture2D" uid="uid://cjrxq2b2va5o5" path="res://Artes/Botoes/OlhosRoxos.png" id="9_08k01"]
[ext_resource type="Texture2D" uid="uid://d3raf3cgibf67" path="res://Artes/Botoes/OlhosPretos.png" id="10_l8pix"]
[ext_resource type="Texture2D" uid="uid://bebprb7k2p8vi" path="res://Artes/Botoes/Top_SF.png" id="11_kcq2o"]
[ext_resource type="Texture2D" uid="uid://bb108w88w5kax" path="res://Artes/Botoes/Top_SC.png" id="12_n33wu"]
[ext_resource type="Texture2D" uid="uid://ho7r4eqrn0de" path="res://Artes/Botoes/Top_EC.png" id="13_w71a6"]
[ext_resource type="Texture2D" uid="uid://qhpijfpeelu4" path="res://Artes/Botoes/Bot_SF.png" id="14_pyxet"]
[ext_resource type="Texture2D" uid="uid://crieo8ucjlb7l" path="res://Artes/Botoes/Bot_SC.png" id="15_rc7bk"]
[ext_resource type="Texture2D" uid="uid://1gt8m06hdgx3" path="res://Artes/Botoes/Bot_EC.png" id="16_felno"]
[ext_resource type="Texture2D" uid="uid://cdnw5rljewpif" path="res://Artes/Botoes/Sap_SF.png" id="17_ahjlx"]
[ext_resource type="Texture2D" uid="uid://cef8i7hicdkfa" path="res://Artes/Botoes/Sap_SC.png" id="18_qsgot"]
[ext_resource type="Texture2D" uid="uid://cu6eqxbkh6ol8" path="res://Artes/Botoes/Sap_EC.png" id="19_ri8yx"]

[node name="menu_tudinho" type="Node2D"]
script = ExtResource("1_t5yqr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_right = 1078.0
offset_bottom = 1080.0
color = Color(0.941176, 0.462745, 0.768627, 1)

[node name="Selecoes" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 323.0
offset_top = 63.0
offset_right = 666.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.829, 2.829)
pivot_offset = Vector2(151.961, 15.4246)
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 6

[node name="Botao_cabelo" type="Button" parent="Selecoes"]
layout_mode = 2
text = "Cabelo"

[node name="Botao_olho" type="Button" parent="Selecoes"]
layout_mode = 2
text = "Olhos"

[node name="Botao_top" type="Button" parent="Selecoes"]
layout_mode = 2
text = "Top"

[node name="Botao_bottom" type="Button" parent="Selecoes"]
layout_mode = 2
text = "Bottom"

[node name="Botao_sapato" type="Button" parent="Selecoes"]
layout_mode = 2
text = "Sapatos"

[node name="Cabelos" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 157.0
offset_top = 193.0
offset_right = 927.0
offset_bottom = 963.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(385, 385)
size_flags_horizontal = 4
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Cabelo1" type="Button" parent="Cabelos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("2_i7264")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Cabelo2" type="Button" parent="Cabelos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("3_cpvgt")
flat = true
expand_icon = true

[node name="Cabelo3" type="Button" parent="Cabelos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("4_i6cjw")
flat = true
expand_icon = true

[node name="Cabelo4" type="Button" parent="Cabelos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2

[node name="Olhos" type="GridContainer" parent="."]
offset_left = 165.0
offset_top = 250.0
offset_right = 925.0
offset_bottom = 910.0
pivot_offset = Vector2(16, 16)
theme_override_constants/h_separation = 75
theme_override_constants/v_separation = 60
columns = 2

[node name="Verde" type="Button" parent="Olhos"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
icon = ExtResource("5_xuwbi")
flat = true
expand_icon = true

[node name="Azul" type="Button" parent="Olhos"]
custom_minimum_size = Vector2(330, 180)
layout_mode = 2
icon = ExtResource("6_t4gv2")
flat = true
expand_icon = true

[node name="Castanho" type="Button" parent="Olhos"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
icon = ExtResource("7_nfqoe")
flat = true
expand_icon = true

[node name="Rosa" type="Button" parent="Olhos"]
custom_minimum_size = Vector2(240, 180)
layout_mode = 2
icon = ExtResource("8_x31bm")
flat = true
expand_icon = true

[node name="Roxo" type="Button" parent="Olhos"]
custom_minimum_size = Vector2(240, 180)
layout_mode = 2
icon = ExtResource("9_08k01")
flat = true
expand_icon = true

[node name="Preto" type="Button" parent="Olhos"]
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
icon = ExtResource("10_l8pix")
flat = true
expand_icon = true

[node name="Tops" type="GridContainer" parent="."]
offset_left = 157.0
offset_top = 193.0
offset_right = 927.0
offset_bottom = 963.0
pivot_offset = Vector2(10, 10)
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Top_SF" type="Button" parent="Tops"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("11_kcq2o")
flat = true
expand_icon = true

[node name="Top_SC" type="Button" parent="Tops"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("12_n33wu")
flat = true
expand_icon = true

[node name="Top_EF" type="Button" parent="Tops"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2

[node name="Top_EC" type="Button" parent="Tops"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("13_w71a6")
flat = true
expand_icon = true

[node name="Bottoms" type="GridContainer" parent="."]
offset_left = 157.0
offset_top = 193.0
offset_right = 927.0
offset_bottom = 963.0
pivot_offset = Vector2(10, 10)
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Bot_SF" type="Button" parent="Bottoms"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("14_pyxet")
flat = true
expand_icon = true

[node name="Bot_SC" type="Button" parent="Bottoms"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("15_rc7bk")
flat = true
expand_icon = true

[node name="Bot_EF" type="Button" parent="Bottoms"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2

[node name="Bot_EC" type="Button" parent="Bottoms"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("16_felno")
flat = true
expand_icon = true

[node name="Sapatos" type="GridContainer" parent="."]
offset_left = 157.0
offset_top = 193.0
offset_right = 927.0
offset_bottom = 963.0
pivot_offset = Vector2(10, 10)
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Sap_SF" type="Button" parent="Sapatos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("17_ahjlx")
flat = true
expand_icon = true

[node name="Sap_SC" type="Button" parent="Sapatos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("18_qsgot")
flat = true
expand_icon = true

[node name="Sap_EF" type="Button" parent="Sapatos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2

[node name="Sap_EC" type="Button" parent="Sapatos"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
icon = ExtResource("19_ri8yx")
flat = true
expand_icon = true

[node name="Cores" type="GridContainer" parent="."]
offset_left = 219.0
offset_top = 222.0
offset_right = 452.0
offset_bottom = 363.0
columns = 3

[node name="0" type="Button" parent="Cores"]
layout_mode = 2

[node name="1" type="Button" parent="Cores"]
layout_mode = 2

[node name="2" type="Button" parent="Cores"]
layout_mode = 2

[node name="3" type="Button" parent="Cores"]
layout_mode = 2

[node name="4" type="Button" parent="Cores"]
layout_mode = 2

[node name="5" type="Button" parent="Cores"]
layout_mode = 2

[node name="6" type="Button" parent="Cores"]
layout_mode = 2

[node name="7" type="Button" parent="Cores"]
layout_mode = 2

[connection signal="pressed" from="Selecoes/Botao_cabelo" to="." method="escolha_menu" binds= ["Cabelos"]]
[connection signal="pressed" from="Selecoes/Botao_olho" to="." method="escolha_menu" binds= ["Olhos"]]
[connection signal="pressed" from="Selecoes/Botao_top" to="." method="escolha_menu" binds= ["Tops"]]
[connection signal="pressed" from="Selecoes/Botao_bottom" to="." method="escolha_menu" binds= ["Bottoms"]]
[connection signal="pressed" from="Selecoes/Botao_sapato" to="." method="escolha_menu" binds= ["Sapatos"]]
[connection signal="pressed" from="Cabelos/Cabelo1" to="." method="escolha_cabelo" binds= [0]]
[connection signal="pressed" from="Cabelos/Cabelo2" to="." method="escolha_cabelo" binds= [1]]
[connection signal="pressed" from="Cabelos/Cabelo3" to="." method="escolha_cabelo" binds= [2]]
[connection signal="pressed" from="Cabelos/Cabelo4" to="." method="escolha_cabelo" binds= [3]]
[connection signal="pressed" from="Olhos/Verde" to="." method="escolha_olho" binds= [0]]
[connection signal="pressed" from="Olhos/Azul" to="." method="escolha_olho" binds= [5]]
[connection signal="pressed" from="Olhos/Castanho" to="." method="escolha_olho" binds= [3]]
[connection signal="pressed" from="Olhos/Rosa" to="." method="escolha_olho" binds= [4]]
[connection signal="pressed" from="Olhos/Roxo" to="." method="escolha_olho" binds= [2]]
[connection signal="pressed" from="Olhos/Preto" to="." method="escolha_olho" binds= [1]]
[connection signal="pressed" from="Tops/Top_SF" to="." method="escolha_top" binds= [0]]
[connection signal="pressed" from="Tops/Top_SC" to="." method="escolha_top" binds= [1]]
[connection signal="pressed" from="Tops/Top_EF" to="." method="escolha_top" binds= [2]]
[connection signal="pressed" from="Tops/Top_EC" to="." method="escolha_top" binds= [3]]
[connection signal="pressed" from="Bottoms/Bot_SF" to="." method="escolha_bottom" binds= [0]]
[connection signal="pressed" from="Bottoms/Bot_SC" to="." method="escolha_bottom" binds= [1]]
[connection signal="pressed" from="Bottoms/Bot_EF" to="." method="escolha_bottom" binds= [2]]
[connection signal="pressed" from="Bottoms/Bot_EC" to="." method="escolha_bottom" binds= [3]]
[connection signal="pressed" from="Sapatos/Sap_SF" to="." method="escolha_sapato" binds= [0]]
[connection signal="pressed" from="Sapatos/Sap_SC" to="." method="escolha_sapato" binds= [1]]
[connection signal="pressed" from="Sapatos/Sap_EF" to="." method="escolha_sapato" binds= [2]]
[connection signal="pressed" from="Sapatos/Sap_EC" to="." method="escolha_sapato" binds= [3]]
[connection signal="pressed" from="Cores/0" to="." method="escolha_cor" binds= [0]]
[connection signal="pressed" from="Cores/1" to="." method="escolha_cor" binds= [1]]
[connection signal="pressed" from="Cores/2" to="." method="escolha_cor" binds= [2]]
[connection signal="pressed" from="Cores/3" to="." method="escolha_cor" binds= [3]]
[connection signal="pressed" from="Cores/4" to="." method="escolha_cor" binds= [4]]
[connection signal="pressed" from="Cores/5" to="." method="escolha_cor" binds= [5]]
[connection signal="pressed" from="Cores/6" to="." method="escolha_cor" binds= [6]]
[connection signal="pressed" from="Cores/7" to="." method="escolha_cor" binds= [7]]
